添加消息接口
