# front-end/src/apis/message/message.model.ts
@@ -1,15 +1,14 @@
 /*
  * @Author: sunji 2025506282@qq.com
- * @Date: 2022-11-15 14:34:37
+ * @Date: 2022-11-11 13:27:47
  * @LastEditors: sunji 2025506282@qq.com
- * @LastEditTime: 2022-11-30 14:37:30
- * @FilePath: \back-end\src\models\global.model.ts
+ * @LastEditTime: 2022-11-30 14:03:45
+ * @FilePath: \front-end\src\apis\article\article.interface.ts
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
  */
 
-export interface IForm {
-  status?: number;
-  keyWord?: string;
-  pageIndex?: number;
-  pageSize?: number;
+export interface IMessage {
+  email: string
+  code?: string
+  password?: string
 }
